Thu May 17 12:02:12 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IORManipulation/filter/Makefile.am:

          It wasn't my last attempt.  I'm adding the TAO_PortableServer
          library to the link list.

Wed May 16 16:26:32 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IORManipulation/filter/Makefile.am:

          Hopefully my last attempt to correct this file.

Wed May 16 09:33:38 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.cpp:
          There was a compile error on SunOS introduced with the
          fix for bug#2925. Fixed it.

        * tao/Profile.h:
          Fix for compile warnings generated because of improper
          class member initialization.

Wed May 16 07:30:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2248_Regression/Bug_2248_Regression.mpc:
          Removed -z now for suncc, we do that in generic for sun now

Tue May 15 12:46:18 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * orbsvcs/tests/Bug_2377_Regression/run_test_ipv6.pl:
          Added IPv6 test to MIOP test for bug#2377.

Tue May 15 11:36:07 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Acceptor.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connection_Handler.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connection_Handler.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Endpoint.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp:
          Implementation of IPv6 and dscp in MIOP. Fix for bug#2925.

        * orbsvcs/tests/Bug_2925_Regression/client.cpp:
        * orbsvcs/tests/Bug_2925_Regression/svc.conf:
        * orbsvcs/tests/Bug_2925_Regression/run_test_ipv6.pl:
        * orbsvcs/tests/Bug_2925_Regression/Hello_Impl.cpp:
        * orbsvcs/tests/Bug_2925_Regression/server.cpp: